# fcdb

./: .gitignore  Cargo.toml  Cargo.toml.backup  DESIGN.md  Dockerfile  PROJECT_STATUS.md  README.md  RESEARCH.md  VALIDATION_README.md  build.rs  main.rs  phase_c_demo.rs  simple_validate.rs  story.jsonnet
.github/workflows/: ci.yml
charts/enishi/: Chart.yaml  values.yaml
charts/enishi/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/fcdb/: Chart.yaml  values.yaml
charts/fcdb/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
crates/fcdb-api/: Cargo.toml
crates/fcdb-api/src/: lib.rs
crates/fcdb-cas/: Cargo.toml
crates/fcdb-cas/src/: lib.rs
crates/fcdb-concur/: Cargo.toml
crates/fcdb-concur/src/: lib.rs
crates/fcdb-core/: Cargo.toml
crates/fcdb-core/fcdb-cas/fcdb-graph/fcdb-api/fcdb-tools/: Cargo.toml
crates/fcdb-core/fcdb-cas/fcdb-graph/fcdb-api/fcdb-tools/fcdb-core/enishi_v2/enishi-core/enishi-core/enishi-core/enishi/phase_b_demo/validation/: simple_validate
crates/fcdb-core/src/: lib.rs
crates/fcdb-cypher/: Cargo.toml
crates/fcdb-cypher/src/: ast.rs  executor.rs  lib.rs  parser.rs  planner.rs
crates/fcdb-cypher/src/grammar/: cypher.pest
crates/fcdb-exec/: Cargo.toml
crates/fcdb-exec/src/: lib.rs
crates/fcdb-graph/: Cargo.toml
crates/fcdb-graph/src/: lib.rs
crates/fcdb-gremlin/: Cargo.toml
crates/fcdb-gremlin/src/: lib.rs  steps.rs  traversal.rs
crates/fcdb-owl/: Cargo.toml
crates/fcdb-owl/src/: lib.rs  parser.rs  reasoner.rs
crates/fcdb-rdf/: Cargo.toml
crates/fcdb-rdf/src/: lib.rs  mapping.rs  sparql.rs
crates/fcdb-shacl/: Cargo.toml
crates/fcdb-shacl/src/: lib.rs  report.rs  shapes.rs  validator.rs
crates/fcdb-tools/: Cargo.toml
crates/fcdb-tools/src/: lib.rs
deploy/k8s/: enishi-deployment.yaml  fcdb-deployment.yaml
docs/: PROJECT_STATUS.md  README.md  deployment.md  query_languages.md
docs/api/: README.md  cas.md  core.md  fcdb-api.md  graph.md
docs/architecture/: README.md
docs/development/: README.md
docs/operations/: README.md
docs/research/: ARXIV_SUBMISSION.md  README.md  arxiv_manifest.txt  main.tex  research.md
docs/validation/: validation.md
enishi-api/: Cargo.toml
enishi-api/src/: lib.rs
enishi-cas/: Cargo.toml
enishi-concur/: Cargo.toml
enishi-core/: Cargo.toml
enishi-core/enishi-cas/: Cargo.toml
enishi-core/enishi-cas/enishi-graph/: Cargo.toml
enishi-core/enishi-cas/enishi-graph/enishi-api/: Cargo.toml
enishi-core/enishi-cas/enishi-graph/enishi-api/enishi-tools/: Cargo.toml
enishi-core/enishi-cas/enishi-graph/enishi-api/enishi-tools/enishi-core/enishi_v2/enishi-core/: Cargo.toml
enishi-core/enishi-cas/enishi-graph/enishi-api/enishi-tools/enishi-core/enishi_v2/enishi-core/enishi-core/enishi-core/enishi/: Cargo.toml
enishi-core/enishi-cas/enishi-graph/enishi-api/enishi-tools/enishi-core/enishi_v2/enishi-core/enishi-core/enishi-core/enishi/phase_b_demo/validation/: simple_validate.rs
enishi-core/src/: lib.rs
enishi-exec/: Cargo.toml
enishi-exec/src/: lib.rs
enishi-graph/: Cargo.toml
enishi-tools/: Cargo.toml
examples/: Cargo.toml  README.md  basic_usage.rs  cypher_query.rs  graphql_api.rs  gremlin_dsl.rs  owl_reasoning.rs  phase_c_demo.rs  phase_d_demo.rs  rest_api.rs  shacl_validate.rs  simple_validate.rs  sparql_query.rs  validate_system.rs
fcdb-cas/: Cargo.toml
fcdb-cas/src/: lib.rs
fcdb-concur/: Cargo.toml
fcdb-core/fcdb-cas/: Cargo.toml
fcdb-core/fcdb-cas/fcdb-graph/: Cargo.toml
fcdb-core/fcdb-cas/fcdb-graph/fcdb-api/: Cargo.toml
fcdb-graph/src/: lib.rs
fcdb-validation/: Cargo.toml  mathematical_properties.rs  performance_benchmarks.rs  performance_benchmarks.rs.bak
loadtest/: k6_3hop.js
research/fcdb/: ARXIV_SUBMISSION.md  arxiv_manifest.txt  arxiv_pack.sh  main.tex
src/: config.rs  health.rs  main.rs  metrics.rs  server.rs
validation/: Cargo.toml  mathematical_properties.rs  performance_benchmarks.rs  validation_runner.rs
