[workspace]
members = ["enishi-core", "enishi-exec", "enishi-concur", "validation"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Enishi Team"]
license = "MIT OR Apache-2.0"

# Main application package
[package]
name = "fcdb"
version = "0.1.0"
edition = "2021"
authors = ["Enishi Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Random utilities
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
num_cpus = "1.16"

# Build info

[build-dependencies]
vergen = { version = "8.0", features = ["build", "cargo", "git", "gix", "rustc"] }

[[bin]]
name = "fcdb"
path = "src/main.rs"