[workspace]
members = [
    "crates/fcdb-core",
    "crates/fcdb-exec",
    "crates/fcdb-concur",
    "crates/fcdb-cas",
    "crates/fcdb-graph",
    "crates/fcdb-rdf",
    "crates/fcdb-shacl",
    "crates/fcdb-cypher",
    "crates/fcdb-gremlin",
    "crates/fcdb-owl",
    "crates/fcdb-api",
    "crates/fcdb-tools",
    "validation"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jun Kawasaki <root@junkawasaki.com>"]
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/fcdb"

[package]
name = "fcdb"
version = "0.1.0"
edition = "2021"
authors = ["Jun Kawasaki <root@junkawasaki.com>"]
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Random utilities
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
num_cpus = "1.16"

# FCDB core components for server (use local workspace)
fcdb-cas = { path = "crates/fcdb-cas" }
fcdb-graph = { path = "crates/fcdb-graph" }
fcdb-shacl = { path = "crates/fcdb-shacl" }
fcdb-cypher = { path = "crates/fcdb-cypher" }
fcdb-gremlin = { path = "crates/fcdb-gremlin" }
fcdb-rdf = { path = "crates/fcdb-rdf", features = ["sparql"] }

[build-dependencies]
vergen = { version = "8.0", features = ["build", "cargo", "git", "gix", "rustc"] }

[[bin]]
name = "fcdb"
path = "src/main.rs"