[package]
name = "enishi-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
enishi-core = { path = "../enishi-core" }
enishi-cas = { path = "../enishi-cas" }
enishi-graph = { path = "../enishi-graph" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Statistics and analysis
statrs = "0.16"

# Progress bars
indicatif = "0.17"

# Random data generation
rand = "0.8"
fake = { version = "2.9", features = ["derive"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
