[workspace]

[package]
name = "fcdb-examples"
version = "0.1.0"
edition = "2021"
authors = ["Jun Kawasaki <root@junkawasaki.com>"]
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/fcdb"
description = "Examples for FCDB (Functorial–Categorical Database)"
keywords = ["database", "examples", "tutorial"]
categories = ["examples"]

[dependencies]
fcdb-core = { path = "../crates/fcdb-core" }
fcdb-cas = { path = "../crates/fcdb-cas" }
fcdb-graph = { path = "../crates/fcdb-graph" }
fcdb-concur = { path = "../crates/fcdb-concur" }
fcdb-exec = { path = "../crates/fcdb-exec" }
fcdb-api = { path = "../crates/fcdb-api" }
fcdb-rdf = { path = "../crates/fcdb-rdf" }
fcdb-shacl = { path = "../crates/fcdb-shacl" }
fcdb-cypher = { path = "../crates/fcdb-cypher" }
fcdb-gremlin = { path = "../crates/fcdb-gremlin" }
fcdb-owl = { path = "../crates/fcdb-owl" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Random utilities
rand = "0.8"

# JSON
serde_json = "1.0"

# Error handling
anyhow = "1.0"

[[example]]
name = "basic_usage"
path = "basic_usage.rs"

[[example]]
name = "rest_api"
path = "rest_api.rs"

[[example]]
name = "graphql_api"
path = "graphql_api.rs"

[[example]]
name = "sparql_query"
path = "sparql_query.rs"

[[example]]
name = "shacl_validate"
path = "shacl_validate.rs"

[[example]]
name = "cypher_query"
path = "cypher_query.rs"

[[example]]
name = "gremlin_dsl"
path = "gremlin_dsl.rs"

[[example]]
name = "owl_reasoning"
path = "owl_reasoning.rs"

[[bin]]
name = "phase_c_demo"
path = "phase_c_demo.rs"

[[bin]]
name = "phase_d_demo"
path = "phase_d_demo.rs"

[[bin]]
name = "simple_validate"
path = "simple_validate.rs"

[[bin]]
name = "validate_system"
path = "validate_system.rs"
