[package]
name = "fcdb-validation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# FCDB crates
fcdb-core = { path = "../crates/fcdb-core" }
fcdb-cas = { path = "../crates/fcdb-cas" }
fcdb-graph = { path = "../crates/fcdb-graph" }
fcdb-exec = { path = "../crates/fcdb-exec" }
fcdb-concur = { path = "../crates/fcdb-concur" }
fcdb-api = { path = "../crates/fcdb-api" }
fcdb-tools = { path = "../crates/fcdb-tools" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Statistics
statrs = "0.16"

# For async traits
async-trait = "0.1"

# For error handling
thiserror = "1.0"

# For command line argument parsing
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "validation_runner"
path = "validation_runner.rs"
