[package]
name = "fcdb-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Public API interfaces (GraphQL, gRPC, REST) for FCDB"
license.workspace = true
repository.workspace = true
keywords = ["database", "api", "graphql", "grpc", "rest"]
categories = ["api-bindings", "web-programming"]

[dependencies]
fcdb-core = "0.1.1"
fcdb-graph = "0.1.0"

# GraphQL
async-graphql = { version = "7.0", features = ["chrono"] }

# gRPC
tonic = "0.12"
prost = "0.12"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
