[package]
name = "fcdb-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Public API interfaces (GraphQL, gRPC, REST) for FCDB"
license.workspace = true
repository.workspace = true
keywords = ["database", "api", "graphql", "grpc", "rest"]
categories = ["api-bindings", "web-programming"]

[dependencies]
fcdb-core = { path = "../fcdb-core" }
fcdb-graph = { path = "../fcdb-graph" }
fcdb-rdf = { path = "../fcdb-rdf", features = ["sparql"] }
fcdb-shacl = { path = "../fcdb-shacl" }
fcdb-cypher = { path = "../fcdb-cypher" }
fcdb-gremlin = { path = "../fcdb-gremlin" }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono"] }

# gRPC
tonic = "0.12"
prost = "0.12"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Temporary directories for testing
tempfile = "3.0"

# Logging
tracing = "0.1"

[dev-dependencies]
fcdb-cas = { path = "../fcdb-cas" }
