[package]
name = "fcdb-core"
version = "0.1.0"
edition = "2021"
authors = ["Jun Kawasaki <root@junkawasaki.com>"]
description = "Core data structures and utilities for FCDB (Functorial–Categorical Database)"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/fcdb"
keywords = ["database", "categorical", "functional", "graph", "cas"]
categories = ["data-structures", "database-implementations"]

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
integer-encoding = "3.0"
hex = "0.4"