[package]
name = "fcdb-cypher"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
fcdb-graph = { path = "../fcdb-graph" }
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["macros"] }
