[package]
name = "fcdb-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Graph operations and traversal for FCDB"
license.workspace = true
repository.workspace = true
keywords = ["database", "graph", "traversal", "rdf"]
categories = ["data-structures", "database-implementations"]

[dependencies]
fcdb-core = "0.1.1"
fcdb-cas = "0.1.0"

# Data structures
serde = { version = "1.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }

# Temporary directories for testing
tempfile = "3.0"

# Logging
tracing = "0.1"
