[package]
name = "fcdb-gremlin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
fcdb-graph = { path = "../fcdb-graph" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["macros"] }
