[package]
name = "fcdb-owl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
fcdb-rdf = { path = "../fcdb-rdf" }
fcdb-graph = { path = "../fcdb-graph" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# OWL processing
horned-owl = "0.18"
curie = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
