[package]
name = "fcdb-owl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
fcdb-rdf = { path = "../fcdb-rdf" }
fcdb-graph = { path = "../fcdb-graph" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# OWL processing - simplified without horned-owl for now
# horned-owl = "1.0"
# curie = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
