[package]
name = "fcdb-rdf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
fcdb-core = { path = "../fcdb-core" }
fcdb-cas = { path = "../fcdb-cas" }
fcdb-graph = { path = "../fcdb-graph" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"

# RDF/SPARQL engine (gated)
oxigraph = { version = "0.4", optional = true }

[features]
default = []
sparql = ["oxigraph"]

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["macros"] }


