[package]
name = "fcdb-shacl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
fcdb-rdf = { path = "../fcdb-rdf" }
fcdb-graph = { path = "../fcdb-graph" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"

# RDF parsing (reuse from fcdb-rdf)
oxigraph = { version = "0.4", optional = true }

[features]
default = []
sparql = ["oxigraph"]
