[package]
name = "fcdb-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Helper tools, utilities, and CLI for FCDB"
license.workspace = true
repository.workspace = true
keywords = ["database", "tools", "cli", "utilities"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
fcdb-core = "0.1.0"
fcdb-cas = "0.1.0"
fcdb-graph = "0.1.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Statistics and analysis
statrs = "0.16"

# Progress bars
indicatif = "0.17"

# Random data generation
rand = "0.8"
fake = { version = "2.9", features = ["derive"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
